[package]
name = "bevy-app"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.0"
dioxus-devtools = { path = "../../dioxus/packages/devtools" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
